# atmofetch

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/atmofetch/: __init__.py
src/atmofetch/_utils/: __init__.py  coordinates.py  distance.py  network.py
src/atmofetch/noaa/: __init__.py  co2.py  hourly.py  stations.py
src/atmofetch/ogimet/: __init__.py  daily.py  dispatcher.py  hourly.py  stations.py
src/atmofetch/wyoming/: __init__.py  sounding.py
tests/: test_noaa.py  test_ogimet.py  test_package.py  test_utils.py  test_wyoming.py
