[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "atmofetch"
version = "0.1.0"
description = "Download meteorological data from publicly available repositories"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
    "pandas>=2.0",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "tqdm>=4.60",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-httpx>=0.30",
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.hatch.build.targets.wheel]
packages = ["src/atmofetch"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
